# faster-fuzzy

./: .dockerignore  .env-docker  .env-local-dev  .env-sample  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.txt  build-debug.sh  build-release.sh  builder.hpp  docker-compose-proxy.html  docker-compose-proxy.yml  docker-compose.yml  encode.hpp  fuzzy_index.hpp  run.sh  test.cpp  tfidf_vectorizer.cpp  tfidf_vectorizer.hpp  vec.cpp  vec.py
builder/: build_indexes.py  database.py  fuzzy_index.py  mapping_index.py  requirements.txt  search_index.py
make_index/: database.py  mapping_index.py  requirements.txt  utils.py
mapper/: CMakeLists.txt  artist_index.hpp  artist_search.cpp  build_indexes.hpp  builder.hpp  create_base_index.cpp  create_base_index.hpp  defs.hpp  dump_recordings.cpp  encode.hpp  explore.cpp  fsm.hpp  fuzzy_index.hpp  index_cache.hpp  indexer.cpp  indexer_thread.hpp  levenshtein.cpp  levenshtein.hpp  make_indexes.cpp  make_mapping.cpp  make_mapping.hpp  mapping.cpp  mbid_mapping.hpp  recording_index.hpp  search.hpp  server.cpp  test.cpp  test_cases.hpp  tfidf_vectorizer.cpp  tfidf_vectorizer.hpp  utils.hpp
mapper/templates/: docs.html  index.html  loading.html  supported.html
python_builder/: build_indexes.py  create_db.py  fuzzy_index.py  utils.py
server/: CMakeLists.txt
